--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -4,7 +4,7 @@
             <div class="alert alert-{{message.tags}} alert-dismissible text-center" role="alert">
                 <button type="button" class="close" data-dismiss="alert"><span aria=-hidden="true">&times;</span></button>
                 <strong>
-                    {% if message.lebel == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
                         Error: 
                     {% else %}
                         {{ message.tags|title }}
