--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Dashboard {% endblock%}
+
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
@@ -26,6 +28,9 @@
         </nav>
     </div>
 </section>
+
+<!-- Alerts  -->
+{% include 'partials/_alerts.html' %}
 
 <section id="dashboard" class="py-4">
     <div class="container">
