--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -53,7 +53,7 @@
                             <td>{{ contact.id }}</td>
                             <td>45 {{ contact.listing }} Circle</td>
                             <td>
-                                <a class="btn btn-light" href="{% url 'listing' contact.listing_id ">View Listing</a>
+                                <a class="btn btn-light" href="{% url 'listing' contact.listing_id %}">View Listing</a>
                             </td>
                         </tr>
                         {% endfor %}
